Реализовал запросы с тэгом user
